# SolidityStrikeHive

./: .gitignore  README.md  evaluation_results.jsonl  pyproject.toml  report.md  results.txt  training_data.pkl
archive/data_location/extracted_vuln_contracts/: DataLocation.sol
dataset/mal_contracts/: mal_contract.sol
dataset/tests/: tests.js
dataset/vulnerable_contracts/: vulnerable_contract.sol
db/8581ad93-5d2c-4416-87a9-79ebe769c434/: index_metadata.pickle
evaluation-test-set/: config.yaml
evaluation-test-set/approve_scam/: ApproveScam.sol
evaluation-test-set/array_deletion/: Array-deletion.sol
evaluation-test-set/askacr/: ASKACR.sol
evaluation-test-set/backdoor_assembly/: Backdoor-assembly.sol
evaluation-test-set/bypass_contract/: Bypasscontrol.sol
evaluation-test-set/delegate_call/: Delegatecall.sol
evaluation-test-set/dos/: DOS.sol
evaluation-test-set/tornado_cash/: Factory.sol
hardhat-docker/: Dockerfile  docker-compose.yml  entrypoint.sh  hardhat.config.js  package-lock.json  package.json
results/access_control/: access_control_mal.sol  access_control_tests.js
results/arithmetic/: contract.sol  contract_mal.sol  tests.js
results/low_level_syscall/: contract_mal.sol  tests.js
results/reentrance/: contract_mal.sol  tests.js
results/time_manipulation/: contract.sol  contract_mal.sol  tests.js
src/offensive_solidity_agents/: DataWrangler.py  contract.sol  crew.py  ex_contract.sol  ex_contract_exploit.test.js  main.py
tmp_dataset/mal_contracts/: mal_contract.sol
tmp_dataset/tests/: tests.js
(+193 files in other folders)
